Bug 146991 - Insert chart -> crash (gtk3)
Summary: Insert chart -> crash (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 147007 156517 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-25 23:27 UTC by raal
Modified: 2023-07-31 11:30 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2022-01-25 23:27:55 UTC
Description:
Crash when insert chart.

Steps to Reproduce:
1.open calc
2.Insert chart
3.Next, Next, Finish

Actual Results:
crash

Expected Results:
no crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 0c3b8792b712e939d2ad524d554f96616b4844be
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: tr-TR (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 1 raal 2022-01-25 23:29:33 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one?
Thanks
 a1e78d6f7c6eb21da1f16573c5c5aa4f07d70ea2 is the first bad commit
commit a1e78d6f7c6eb21da1f16573c5c5aa4f07d70ea2
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jan 14 21:20:28 2022 +0100

    source a2eaf99e46f370ffb3b73828c2bdc53dc193b9a4

https://git.libreoffice.org/core/+/a2eaf99e46f370ffb3b73828c2bdc53dc193b9a4
  make comphelper::OInterfaceContainerHelper4 more threadsafe
Comment 2 Commit Notification 2022-01-26 16:15:31 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/385bd85b20b9efff981e7e5cd063a01d39e1e45a

tdf#146991 Insert chart -> crash

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2022-01-26 18:50:03 UTC
it seems to be happening with gtk3
Comment 4 Xisco Faulí 2022-01-26 18:53:44 UTC
*** Bug 147007 has been marked as a duplicate of this bug. ***
Comment 5 BogdanB 2022-02-03 20:44:04 UTC
No crash

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d5f015185240a7bddfed7ddf10d6b5426e35fb72
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 stragu 2023-07-29 18:42:39 UTC
*** Bug 156517 has been marked as a duplicate of this bug. ***
Comment 7 ady 2023-07-31 11:30:07 UTC Comment hidden (obsolete)