tdf#146991 Insert chart -> crash

regression from
    commit a2eaf99e46f370ffb3b73828c2bdc53dc193b9a4
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Jan 14 10:56:50 2022 +0200
    make comphelper::OInterfaceContainerHelper4 more threadsafe

Change-Id: I259d24a3f0c710222544797728c5f40ff299e50b